--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <a href="index.html"></a>
-        
+        <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
     </body>
 </html>
