--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,5 +14,6 @@
         <p>This is image</p>
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click to see image</a>
+        <a href="tweets.html"></a>
     </body>
 </html>
