--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <a href="index.html"></a>
-        <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
+        <blockquote class="twitter-tweet">
+            <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
+        </blockquote>
+        
     </body>
 </html>
