--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,10 +5,23 @@
         <title>My First Portfolio</title>
     </head>
     <body>
-        <a href="index.html"></a>
-        <blockquote class="twitter-tweet">
-            <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
-        </blockquote>
+        <header>
+            <ul>
+                <li>
+                    <a href="index.html">another webpage</a>
+                </li>
+            </ul>
+        </header>
+        <main>
+            <a href="index.html"></a>
+            <blockquote class="twitter-tweet">
+                <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
+            </blockquote>
+        </main>
+        <footer>
+
+        </footer>
+
         
     </body>
 </html>
