--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,13 +13,18 @@
             </ul>
         </header>
         <main>
-            <a href="index.html"></a>
-            <blockquote class="twitter-tweet">
-                <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
-            </blockquote>
+            <article
+                ><a href="index.html"></a>
+                <blockquote class="twitter-tweet">
+                    <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
+                </blockquote>
+            </article>
+            <aside>
+                <p>placeholder to add comment thread later</p>
+            </aside>
         </main>
         <footer>
-
+            Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
         </footer>
 
         
