--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,7 +4,6 @@
         <meta charset="8UTF">
         <title>My First Portfolio</title>
     </head>
-    <body>
         <header>
             <ul>
                 <li>
@@ -13,8 +12,8 @@
             </ul>
         </header>
         <main>
-            <article
-                ><a href="index.html"></a>
+            <article>
+                <a href="index.html"></a>
                 <blockquote class="twitter-tweet">
                     <a href="https://x.com/facesofalxse/status/1945781895301632371">tweet Link</a>
                 </blockquote>
@@ -27,6 +26,4 @@
             Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
         </footer>
 
-        
-    </body>
 </html>
