--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,7 +4,7 @@
         <meta charset="8UTF">
         <title>My First Portfolio</title>
     </head>
-
+        <body>
         <header>
             <ul>
                 <li>
@@ -33,5 +33,5 @@
         <footer>
             Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
         </footer>
-
+    </body>
 </html>
