--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <body>
     <head>
         <meta charset="8UTF">
         <title>My First Portfolio</title>
@@ -25,5 +26,5 @@
         <footer>
             Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
         </footer>
-
+    </body>
 </html>
