--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -24,7 +24,7 @@
             </aside>
         </main>
         <footer>
-            Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
+            <p>Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.</p>
         </footer>
     </body>
 </html>
