--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -31,7 +31,7 @@
             
         </main>
         <footer>
-            Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.
+            <p>Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.</p>
         </footer>
     </body>
 </html>
