--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,33 +5,32 @@
         <title>My First Portfolio</title>
     </head>
         <body>
-        <header>
-            <ul>
-                <li>
-                    <a href="tweets.html">this is another webpage</a>
-                </li>
-            </ul>
-        </header>
-        <main>
+            <header>
+                <ul>
+                    <li>
+                        <a href="tweets.html">this is another webpage</a>
+                    </li>
+                </ul>
+            </header>
+            <main>
                 <article>
-                    <h1>This is the first title</h1>
-                    <p>This is first paragraph</p>
-                    <h2>This is the second title</h2>
-                    <p>This is second paragraph</p>
-                    <h3>This is the third title</h3>
-                    <p>This is third paragraph</p>
-                    <p>This is image</p>
-                    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-                    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click to see image</a>
-                    <a href="tweets.html"></a>
+                        <h1>This is the first title</h1>
+                        <p>This is first paragraph</p>
+                        <h2>This is the second title</h2>
+                        <p>This is second paragraph</p>
+                        <h3>This is the third title</h3>
+                        <p>This is third paragraph</p>
+                        <p>This is image</p>
+                        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+                        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click to see image</a>
+                        <a href="tweets.html"></a>
                 </article>
                 <aside>
-                    <p>placeholder to add comment thread later</p>
+                        <p>placeholder to add comment thread later</p>
                 </aside>
-            
-        </main>
-        <footer>
-            <p>Made by ROMAISSAE <a href="www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>.</p>
-        </footer>
+            </main>
+            <footer>
+                Made by ROMAISSAE - <a href="https://www.linkedin.com/in/romaissae-ben-252961278" target="_blank">here</a>
+            </footer>
     </body>
 </html>
