--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,6 +24,33 @@
                         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
                         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Click to see image</a>
                         <a href="tweets.html"></a>
+                        <table>
+                            <tr>
+                                <th>Name</th>
+                                <th>Age</th>
+                                <th>Country</th>
+                            </tr>
+                            <tr>
+                                <tbody>John</tbody>
+                                <tbody>25</tbody>
+                                <tbody>USA</tbody>
+                            </tr>
+                            <tr>
+                                <tbody>Emily</tbody>
+                                <tbody>28</tbody>
+                                <tbody>Canada</tbody>
+                            </tr>
+                            <tr>
+                                <tbody>Michael</tbody>
+                                <tbody>32</tbody>
+                                <tbody>Australia</tbody>
+                            </tr>
+                            <tr>
+                                <tbody>Sophia</tbody>
+                                <tbody>21</tbody>
+                                <tbody>UK</tbody>
+                            </tr>
+                        </table>
                 </article>
                 <aside>
                         <p>placeholder to add comment thread later</p>
