--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,9 +26,9 @@
                         <a href="tweets.html"></a>
                         <table>
                             <tr>
-                                <th>Name</th>
-                                <th>Age</th>
-                                <th>Country</th>
+                                <thead>Name</thead>
+                                <thead>Age</thead>
+                                <thead>Country</thead>
                             </tr>
                             <tr>
                                 <tbody>John</tbody>
